<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.andriod.splock.screens.title.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.andriod.splock.screens.game.GameFragment"
        android:label="@string/pick_prompt"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_gameFragment_to_gameLostFragment"
            app:destination="@id/gameLostFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_gameFragment_to_gameTiedFragment"
            app:destination="@id/gameTiedFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="rounds"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.example.andriod.splock.screens.won.GameWonFragment"
        android:label="@string/game_finished"
        tools:layout="@layout/fragment_game_won">
        <action
            android:id="@+id/action_gameWonFragment_to_gameFragment"
            app:destination="@id/titleFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/gameLostFragment"
        android:name="com.example.andriod.splock.screens.lost.GameLostFragment"
        android:label="@string/game_finished"
        tools:layout="@layout/fragment_game_lost">
        <action
            android:id="@+id/action_gameLostFragment_to_gameFragment"
            app:destination="@id/titleFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/gameTiedFragment"
        android:name="com.example.andriod.splock.screens.tied.GameTiedFragment"
        android:label="@string/game_finished"
        tools:layout="@layout/fragment_game_tied">
        <action
            android:id="@+id/action_gameTiedFragment_to_gameFragment"
            app:destination="@id/titleFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/about"
        android:name="com.example.andriod.splock.screens.about.About"
        android:label="@string/about_the_game"
        tools:layout="@layout/fragment_about" />
</navigation>