<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="gameViewModel"
            type="com.example.andriod.splock.screens.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.game.GameFragment">

        <ImageView
            android:id="@+id/stone_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> gameViewModel.choicemade(view)}"
            android:src="@drawable/ic_stone"
            app:layout_constraintBottom_toTopOf="@+id/scissor_image"
            app:layout_constraintEnd_toStartOf="@+id/paper_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/paper_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> gameViewModel.choicemade(view)}"
            android:src="@drawable/ic_paper"
            app:layout_constraintBottom_toTopOf="@+id/lizard_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stone_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/scissor_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> gameViewModel.choicemade(view)}"
            android:src="@drawable/ic_scissor"
            app:layout_constraintBottom_toTopOf="@+id/spock_image"
            app:layout_constraintEnd_toStartOf="@+id/lizard_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stone_image" />

        <ImageView
            android:id="@+id/lizard_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> gameViewModel.choicemade(view)}"
            android:src="@drawable/ic_lizard"
            app:layout_constraintBottom_toTopOf="@+id/spock_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/scissor_image"
            app:layout_constraintTop_toBottomOf="@+id/paper_image" />

        <ImageView
            android:id="@+id/spock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> gameViewModel.choicemade(view)}"
            android:src="@drawable/ic_spock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lizard_image"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toEndOf="@+id/scissor_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <TextView
            android:id="@+id/paper_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/paper"
            app:layout_constraintBottom_toTopOf="@+id/lizard_image"
            app:layout_constraintEnd_toEndOf="@+id/paper_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stone_text"
            app:layout_constraintStart_toStartOf="@+id/paper_image"
            app:layout_constraintTop_toBottomOf="@+id/paper_image"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/stone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stone"
            app:layout_constraintBottom_toTopOf="@+id/scissor_image"
            app:layout_constraintEnd_toEndOf="@+id/stone_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/stone_image"
            app:layout_constraintTop_toBottomOf="@+id/stone_image"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/scissor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/scissor_text"
            app:layout_constraintBottom_toTopOf="@+id/spock_image"
            app:layout_constraintEnd_toEndOf="@+id/scissor_image"
            app:layout_constraintStart_toStartOf="@+id/scissor_image"
            app:layout_constraintTop_toBottomOf="@+id/scissor_image"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lizard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Lizard"
            app:layout_constraintBottom_toTopOf="@+id/spock_image"
            app:layout_constraintEnd_toEndOf="@+id/lizard_image"
            app:layout_constraintStart_toStartOf="@+id/lizard_image"
            app:layout_constraintTop_toBottomOf="@+id/lizard_image"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/spock_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/spock_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spock_image"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/cround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/circular_view"
            android:gravity="center"
            android:text="1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/androidScoreValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yourScoreValue" />

        <TextView
            android:id="@+id/your_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/your_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/yourScoreValue"
            app:layout_constraintEnd_toEndOf="@+id/yourScoreValue"
            app:layout_constraintStart_toStartOf="@+id/yourScoreValue" />

        <TextView
            android:id="@+id/yourScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/score_circular_view"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cround"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/android_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/android_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/androidScoreValue"
            app:layout_constraintEnd_toEndOf="@+id/androidScoreValue"
            app:layout_constraintStart_toStartOf="@+id/androidScoreValue" />

        <TextView
            android:id="@+id/androidScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/score_circular_view"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cround" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>